--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Outfit:wght@100..900&family=Prata&display=swap" rel="stylesheet">
-    <title>Forever</title>
+    <title>Fasdeem</title>
   </head>
   <body>
     <div id="root"></div>
